<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gold"
    tools:context=".ThirdActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/tools"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_btn"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/header"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/RosyBrown"
        />

    <TextView
        android:id="@+id/alarmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/set_alarm_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/timePicker"
        />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:timePickerMode="spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alarmLabel"
        app:layout_constraintBottom_toTopOf="@id/alarmButton" />

    <Button
        android:id="@+id/alarmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/phoneNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timePicker"
        android:backgroundTint="@color/Tomato"/>

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="wrap_content"
        android:hint="@string/call_hint"
        android:layout_height="50dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/alarmButton"
        app:layout_constraintBottom_toBottomOf="@id/callButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="phone|number"
        />

    <Button
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/query"
        app:layout_constraintTop_toTopOf="@id/phoneNumber"
        android:backgroundTint="@color/Tomato"
        />

    <EditText
        android:id="@+id/query"
        android:layout_width="wrap_content"
        android:hint="@string/search_hint"
        android:layout_height="50dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/callButton"
        app:layout_constraintBottom_toBottomOf="@id/searchButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="text"
        />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/query"
        android:backgroundTint="@color/Tomato"
        />

</androidx.constraintlayout.widget.ConstraintLayout>