<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gold"
    >

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/input_book_details"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/input_title"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/header"
        app:layout_constraintBottom_toBottomOf="@id/authorLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/editTitle"
        android:labelFor="@id/editTitle"/>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/titleLabel"
        app:layout_constraintBottom_toBottomOf="@id/titleLabel"
        app:layout_constraintLeft_toLeftOf="@id/titleLabel"
        app:layout_constraintRight_toRightOf="parent"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/authorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/input_author"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/titleLabel"
        app:layout_constraintBottom_toBottomOf="@id/yearLabel"
        app:layout_constraintLeft_toLeftOf="@id/titleLabel"
        app:layout_constraintRight_toRightOf="@id/titleLabel"
        android:labelFor="@id/editAuthor"/>

    <EditText
        android:id="@+id/editAuthor"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/authorLabel"
        app:layout_constraintBottom_toBottomOf="@id/authorLabel"
        app:layout_constraintLeft_toLeftOf="@id/editTitle"
        app:layout_constraintRight_toRightOf="@id/editTitle"
        android:inputType="text"
        android:autofillHints="name"/>

    <TextView
        android:id="@+id/yearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/input_year"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/authorLabel"
        app:layout_constraintBottom_toBottomOf="@id/submitDetails"
        app:layout_constraintLeft_toLeftOf="@id/titleLabel"
        app:layout_constraintRight_toRightOf="@id/titleLabel"
        android:labelFor="@id/editYear"/>

    <EditText
        android:id="@+id/editYear"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/yearLabel"
        app:layout_constraintBottom_toBottomOf="@id/yearLabel"
        app:layout_constraintLeft_toLeftOf="@id/editTitle"
        app:layout_constraintRight_toRightOf="@id/editTitle"
        android:inputType="number"/>

    <Button
        android:id="@+id/submitDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/header"
        android:backgroundTint="@color/Tomato"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submitDetails"
        android:src="@drawable/books"
        android:contentDescription="@string/books_img_description"
        />


</androidx.constraintlayout.widget.ConstraintLayout>